--- a/app/package.json
+++ b/app/package.json
@@ -16,9 +16,11 @@
     "cross-env": "^7.0.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "export-to-csv": "^0.2.1",
     "history": "^5.1.0",
     "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0-rc.11",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
