--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0-rc.11",
     "moment": "^2.29.1",
+    "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
