--- a/app/package.json
+++ b/app/package.json
@@ -16,12 +16,10 @@
     "cross-env": "^7.0.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "export-to-csv": "^0.2.1",
     "history": "^5.1.0",
     "html-to-draftjs": "^1.5.0",
     "immutable": "^4.0.0-rc.11",
     "moment": "^2.29.1",
-    "papaparse": "^5.3.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
@@ -37,7 +35,8 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.17.4"
   },
   "scripts": {
     "start": "cross-env PORT=3001 react-scripts start",
